2011-05-26  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* start prooftree in the middle of a proof (just
	  emacs-lisp changes)
	* kill proof tree window from emacs 
	* let windows survive bulk undo's and change their state accordingly

2011-05-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* clear sequent window when undoing the selected proof command

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* release version 0.3 on 2011-04-21 14:43:35 UTC

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* make-bundle fix

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-04-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* new protocol command switch-to
	* Coq's Focus/Unfocus work

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* release version 0.2 on 2011-04-20 20:36:37 UTC

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* another make-bundle fix

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* make-bundle fix

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-04-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* existential variables are now updated (which required
	  only Emacs lisp changes)
	* fix a number of cases when the sequent window showed
	  invalid or non-existing sequent text

2011-04-18  Hendrik Tews <prooftree@askra.de>

	* release version 0.1

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* undo release
	* makefile fix

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* minor

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* make-bundle changes

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small improvements

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* various README's, make-bundle

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* GPL 3

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* configure
