@@ -12,6 +12,9 @@
 <UL>
 <LI>support starting prooftree in the middle of a proof
 </LI>
+<LI>display extra windows with the complete sequent text or the
+complete proof command on mouse button 2
+</LI>
 <LI>keep proof tree windows when retracting in a big step to a
 point before the proof
 <P></P></LI>
