@@ -1,8 +1,17 @@
+2011-05-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* external node windows on mouse button 2
+	* window titles
+
+2011-05-26  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* prooftree toolbar and menu entry (emacs lisp only)
+
 2011-05-26  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* start prooftree in the middle of a proof (just
 	  emacs-lisp changes)
-	* kill proof tree window from emacs 
+	* kill proof tree window from emacs
 	* let windows survive bulk undo's and change their state accordingly
 
 2011-05-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
